[gd_scene load_steps=4 format=3 uid="uid://b37podescl8a"]

[ext_resource type="Script" path="res://src/goos/visual/states/Drag.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://bi1w3i1bm7sd1" path="res://src/goos/visual/states/DeformedByMovement.tscn" id="3"]
[ext_resource type="PackedScene" path="res://src/goos/visual/states/DeformedByCollision.tscn" id="5"]

[node name="Drag" type="Node"]
script = ExtResource("1")

[node name="DeformedByMovement" parent="." instance=ExtResource("3")]

[node name="DeformedByCollision" parent="." instance=ExtResource("5")]

[connection signal="contact_found" from="DeformedByMovement" to="." method="_on_DeformedByMovement_contact_found"]
[connection signal="contact_lost" from="DeformedByCollision" to="." method="_on_DeformedByCollision_contact_lost"]
